correct all the languages and add the new functionality of delete user account by user

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1201,6 +1201,10 @@
 		"enabled":"ممكن",
 		"disabled":"معاق",
 		"less_than_err":"يرجى تحميل الصور أقل من 6",
-		"err_file_formart": "النظام غير متوافق مع تنسيق الملف هذا"
+		"err_file_formart": "النظام غير متوافق مع تنسيق الملف هذا",
+		"reallyWantDelete" : "هل تريد حقًا حذف حسابك؟",
+		"looseAllData" :"ستفقد جميع بياناتك ولن يتمكن أحد من الوصول إليها مرة أخرى! يتم أيضًا فقد المعلومات المخزنة داخل بلوكشين Aimedis إلى الأبد لأنك الوحيد الذي يمكنه رؤيتها.",
+		"delete_your_account":"حذف حسابك",
+      	"delete_account":"حذف الحساب"
 	}
 }
