--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -5,7 +5,6 @@
 		"login_LOGIN_btn": "登录",
 		"login_an_account": "没有帐户？",
 		"login_Registerhere": "在这里注册",
-		"reg_content": "注册内容",
 		"Register_for_Aimedis": "注册Aimedis V2",
 		"Register_Name": "名称",
 		"Register_email": "电子邮件地址",
@@ -68,8 +67,6 @@
 		"or_drag_here": "或拖到这里",
 		"suported_file_type": "支持的文件类型",
 		"QR_code": "二维码",
-		"change": "更改",
-		"visibilty": "可见性",
 		"edit_id_pin": "您可以随时更改您的ID和PIN码。",
 		"edit": "编辑",
 		"and": "和",
@@ -110,11 +107,9 @@
 		"mobile_number_not_valid": "手机号码无效",
 		"insurance_added": "Insuranse添加成功。",
 		"number": "数字",
-		"delete": "删除",
 		"de_archive": "取消存档",
 		"password": "密码",
 		"supportive_text": "如果需要，可以添加这样的支持文本。",
-		"current": "当前",
 		"new_password": "新密码",
 		"confirm_password": "确认新密码",
 		"two_fac_auth": "双重认证",
@@ -138,7 +133,6 @@
 		"remove": "删除",
 		"add_trusted_doc": "添加受信任的医生",
 		"select_doctor": "请选择医生",
-		"new": "新",
 		"find_doc": "找医生",
 		"serch_by_name_id": "按名称或ID搜索",
 		"add_to_trusted_doc": "添加到受信任的医生",
@@ -164,7 +158,6 @@
 		"Opt_In": "选择加入",
 		"apply_right_management_for_all_items": "应用所有项目的权限管理设置",
 		"plz_mention_date_time": "请注明日期时间，直到",
-		"make_all_item_visiblee_now_untill": "让所有项目都可见（直到更改) ",
 		"make_all_item_visible_untill": "让所有项目都可见，直到",
 		"make_all_item_hide_now_untill": "现在隐藏所有项目（直到更改) ",
 		"make_all_item_hide_untill": "隐藏所有项目，直到",
@@ -233,15 +226,8 @@
 		"atc_if_applicable": "ATC代码（如果适用）",
 		"manufacturer": "制造商",
 		"pack_size": "包装尺寸",
-		"Select": "选择",
-		"Status": "状态",
-		"Sent": "已发送",
 		"on": "上",
 		"request": "请求",
-		"pending": "待定",
-		"rejected": "已拒绝",
-		"answered": "回答",
-		"cancelled": "已取消",
 		"req_updated_successfully": "请求成功更新",
 		"Case": "案件",
 		"again": "再次",
@@ -334,7 +320,6 @@
 		"covid_diary": "COVID-19日记",
 		"diagnosis": "诊断",
 		"travel": "旅行",
-		"travelled": "旅行过",
 		"diary": "日记",
 		"diary_note": "日记笔记",
 		"doc_visit": "去看医生",
@@ -365,7 +350,6 @@
 		"pain_areas": "疼痛部位",
 		"temparture": "温度",
 		"saturation": "饱和度",
-		"location": "位置",
 		"pain_type": "疼痛类型",
 		"pain_quality": "疼痛质量",
 		"slct_ICD_serch_code": "选择ICD目录并搜索代码",
@@ -436,7 +420,6 @@
 		"prsnalize_a_dashbord_drag_recorder": "通过添加或删除卡片来个性化您的仪表板。 拖动以重新排序。",
 		"add_more_cards": "添加更多卡片",
 		"depression": "抑郁症",
-		"multiplee_lesions_again_suggest": "多重病变再次表明慢性脱髓鞘。 轻度萎缩最大的额叶区域可能与多发性硬化症有关。 与之前的研究相比，发现似乎稳定。 没有异常增强。",
 		"add_profile": "添加配置文件",
 		"picture": "图片",
 		"cmplt_ur_profile": "完成您的个人资料",
@@ -448,9 +431,6 @@
 		"no_data_avlbl": "没有可用的数据",
 		"last_doc_visit": "最后一次就诊",
 		"upcming_appointment": "即将到来的约会",
-		"Neurology": "神经学",
-		"office": "办公室",
-		"video": "视频",
 		"last_document": "最后的文档",
 		"view_all": "查看全部",
 		"temp_headech": "体温和头痛",
@@ -468,7 +448,6 @@
 		"show_past_apointment": "显示过去的约会",
 		"plz_write_short_explnation": "请写一个简短的解释为什么你必须取消约会。 谢谢！.",
 		"short_msg": "短消息",
-		"apppointments": "约会",
 		"arrng_apointmnt": "安排预约",
 		"sync_ur_calander": "同步到您的日历",
 		"search_within": "搜索范围",
@@ -519,13 +498,11 @@
 		"who_would_u_like_invite": "你想邀请谁？",
 		"patient_profile_is_not_correct": "病人档案不正确",
 		"recved_on": "收到日期",
-		"patient": "病人",
 		"approve": "批准",
 		"decline": "下降",
 		"prescription_inquiry": "处方查询",
 		"standerd_ques": "标准问题",
 		"patient_health_status": "患者健康状况",
-		"medications": "药物",
 		"suported_file_type_jpg_png": "支持的文件类型：。jpg，。png，。pdf",
 		"suported_file_type_jpg_png_dcm": "支持的文件类型：.jpg，.png，.pdf，.doc，.dcm等",
 		"snd_patient_timeline_email": "发送到病人的时间表和电子邮件",
@@ -790,7 +767,6 @@
 		"no_diagnoses": "没有诊断",
 		"free_remarks": "免费评论",
 		"relation": "关系",
-		"Nurology": "神经病学",
 		"no_data_yet": "还没有数据",
 		"confirmed": "已确认",
 		"emergency_cont": "紧急联系",
@@ -1223,6 +1199,13 @@
 		"email_rcv_update_reciept":"通过电子邮件发送您的最新动态和收据",
 		"upload_license_is" :"上传的许可证是",
 		"less_than_err":"请上传少于 6 张图片",
-		"err_file_formart": "系统不支持此文件格式"
+		"err_file_formart": "系统不支持此文件格式",
+		"reallyWantDelete" : "您真的要删除您的帐户吗？",
+		"looseAllData" :"您将丢失所有数据，再也没有人可以访问它！此外，存储在 Aimedis 区块链中的信息将永远丢失，因为您是唯一能够看到它的人。",
+		"delete_your_account":"删除您的帐户",
+      	"delete_account":"删除帐户",
+		"make_all_item_visible_now_untill": "现在使所有项目可见（直到更改）",
+		"multiple_lesions_again_suggest": "多处病变再次表明慢性脱髓鞘。额叶区最大的轻度萎缩可能与多发性硬化有关。与先前的研究相比，结果似乎稳定。无异常增强。",
+		"where_r_u_l": "你现在在哪里"  
 	}
 }
