--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -5,7 +5,6 @@
 		"login_LOGIN_btn": "INICIAR SESSÃO",
 		"login_an_account": "não tem uma conta?",
 		"login_Registerhere": "Registre-se aqui",
-		"reg_content": "Conteúdo da página Registro",
 		"Register_for_Aimedis": "Registra-se na Aimedis V2",
 		"Register_Name": "Nome",
 		"Register_email": "Endereço de E-mail",
@@ -25,7 +24,6 @@
 		"forget_pass": "Esqueci a Minha Senha",
 		"Register_number": "1 número",
 		"Register_special": "1 caractere especial",
-		"recrutmentemp_content": "funcionários de recrutamento",
 		"Aimedis_Staff_Reg": "Registro da Equipe Aimedis",
 		"YOUR_CONTACT_INFO": "SUA INFORMAÇÃO DE CONTATO",
 		"recEmp_Emailaddress": "Endereço de e-mail",
@@ -130,7 +128,6 @@
 		"select_family_doc": "Por favor, selecione médico de família",
 		"make_sure_family_doc": "Certifique-se de adicionar o seu médico de família",
 		"add_a_family_doc": "Adicione um médico de família",
-		"Trusted_doc": "Médicos Confiáveis",
 		"doc_have_access_ur_journal": "Estes médicos têm acesso ao seu diário. Pode adicionar quantos médicos confiáveis desejar.",
 		"doc_already_exit_in_list": "O Médico já existe na sua lista",
 		"doc_removed_trusted_list": "O médico foi removido da sua lista de Confiáveis",
@@ -148,7 +145,6 @@
 		"plz_enter_valid_email": "Digite um e-mail válido",
 		"format_updated": "Formato atualizado",
 		"blockchain_secure_organ_donar_Pass": "Passagem de doador de órgãos protegida por Blockchain",
-		"easy_select_donar": "Aqui pode facilmente selecionar se deseja ser ou não doador de órgãos a qualquer momento.",
 		"organ_transplant_declaration": "Caso um órgão/tecido meu seja considerado transplável depois da minha morte, declaro:",
 		"organ_tissue": "Órgãos/Tecidos",
 		"dont_allow_transplantation": "Não, NÃO permito o transplante de nenhum dos meus órgãos ou tecidos",
@@ -157,8 +153,6 @@
 		"setup_who_can_see_upload_data": "Configure quem pode ver seus dados e quem pode enviar dados para seu perfil",
 		"emergancy_access_for_hospital_doc": "Acesso de emergência aos meus arquivos de emergência para hospitais e médicos",
 		"specify00000_kind_of_right_management": "Por favor, especifique que tipo de gestão prefere?",
-		"automatic_hidden_content": "Um novo item é ESCONDIDO automaticamente para médicos e enfermeiras no caso de um acesso regular ao perfil (PIN e ID) e deve ser manualmente tornado VISÍVEL por mim (TORNAR VISÍVEL SEMPRE OU TORNAR VISÍVEL ATÉ UMA DATA ESPECIFICADA.)",
-		"automatic_visible_content": "Um novo item é tornado VISÍVEL automaticamente para médicos e enfermeiras no caso de um acesso regular AO perfil (PIN e ID) e deve ser manualmente ESCONDIDO por mim (ESCONDER SEMPRE ou ESCONDER ATÉ UMA DATA ESPECIFICADA.)",
 		"Opt_Out": "Excluir",
 		"Opt_In": "Incluir",
 		"apply_right_management_for_all_items": "Aplicar uma configuração correta de gestão de TODOS os itens",
@@ -178,7 +172,6 @@
 		"file_uploaded": "O arquivo foi enviado com sucesso",
 		"upload_id_card": "Carregue uma foto do seu cartão de ID",
 		"by_clicking_accept_aimedis_term": "Ao clicar aqui, está a aceitar os termos da Aimeidis e sua política de privacidade",
-		"attach_doc": "Documento Anexado",
 		"u_r_nvr_obligate_to_upload_doc": "Nunca é obrigado a carregar sua licença ou qualquer outro comprovante de identidade.",
 		"in_critical_enviroment_id": "No ambiente crítico, torna muito mais fácil uma identificação e comparação única com os dados de assistência médica existentes. Além disso, a dedução de serviços de saúde com sua companhia de seguros é muito mais fácil dessa forma",
 		"date": "Data",
@@ -194,7 +187,6 @@
 		"sick_cert": "Certificado de Doença",
 		"inquiry": "Consulta",
 		"for_sick_cert_req_doc": "Para solicitação de certificado de doença, precisa de um médico",
-		"for pres_req_doc_require": "Para solicitação de prescrição, precisa de um médico",
 		"share_health_status": "Compartilhar Estado de Saúde",
 		"share_health_status_info_from_journal": "Isso compartilhará as informações do seu estado de saúde no seu diário, pois isso é necessário para que o médico possa aprovar sua solicitação de prescrição.",
 		"see_list_shared_info": "Veja a lista de informações compartilhadas",
@@ -388,7 +380,6 @@
 		"date_of_death": "Data da morte (se aplicável)",
 		"disease_name": "Nome da Doença",
 		"gender_of_relatives": "Sexo do parente",
-		"relação_de_relativo": "Relação com o parente",
 		"all_time": "Sempre",
 		"type_2": "Tipo: (2)",
 		"doc_all": "Médico: Todos",
@@ -456,7 +447,6 @@
 		"show_after": "Mostrar depois",
 		"slct_time_slot": "Selecionar o intervalo de tempo",
 		"holiday": "Férias",
-		"point_booked ": " Consulta médica reservada com sucesso",
 		"upcming_apointment": "Consulta médica futura",
 		"office_visit": "Visita ao escritório",
 		"cancel_apointmnt": "Cancela  a consulta médica",
@@ -533,7 +523,6 @@
 		"another_patient_data": "Dados de Outro Paciente",
 		"get_patient_access_data": "Obter Dados de Acesso do Paciente",
 		"id_pin_not_correct": "ID ou PIN não é correto",
-		"health_access_for_non_conn_patient": "Acesso a dados de saúde de paciente não conectado",
 		"enter_pin": "Insira o PIN",
 		"accept": "Aceitar",
 		"pharma_prescription": "Receita de farmácia",
@@ -811,13 +800,10 @@
 		"unable_to_update": "Não se pode atualizar",
 		"enter_your_pass": "Digite sua Senha",
 		"payment_unsuccess": "Pagamento não concluído",
-		"Order_unsuccess": "Pedido com Sucesso.",
-		"order_cant": "O pedido ainda não pode ser feito!",
 		"dont_have_acc": "Não tem conta?",
 		"type_a_msg": "Digite uma mensagem...",
 		"back_to_screen": "Voltar para o ecrã de login",
 		"verify_email": "Por favor, verifique seu \nendereço de e-mail",
-		"aimis_link": "Se houver uma conta Aimedis vinculada a \n",
 		"email_reset": "e-mail, enviaremos \ninstruções para redefinir sua senha.",
 		"we_sent_email": "Enviamos um e-mail de verificação para \n",
 		"click_the_link": ". Clique no link no e-mail \n para começar!",
@@ -1052,7 +1038,6 @@
 		"plz_check_unread_message_in_chat":"Mensagens não lidas no bate-papo. Por favor, checar isto.",
 		"new_message_in_chat_plz_check":"Nova (s) mensagem (ns) no módulo de chat. Acesse CHAT (link) para verificar suas mensagens.",
 		"remove_inquiry":"Remover o inquérito?",
-
 		"archive_item":"Item de arquivo",
 		"do_u_really_want_archive_item":"Você realmente deseja arquivar o item?",
 		"delete_item":"Excluir item",
@@ -1217,6 +1202,10 @@
 		"email_rcv_update_reciept":"E-mail em que você receberá atualizações e recibos",
 		"upload_license_is" :"Licença carregada é",
 		"less_than_err":"Faça upload de imagens com menos de 6",
-		"err_file_formart": "O sistema não é compatível com este formato de arquivo"
+		"err_file_formart": "O sistema não é compatível com este formato de arquivo",
+		"reallyWantDelete" : "Você realmente deseja deletar sua conta?",
+		"looseAllData" :"Você perderá todos os seus dados e ninguém poderá acessá-los novamente! Além disso, as informações armazenadas dentro do blockchain Aimedis são perdidas para sempre, pois você é o único a ser capaz de vê-las.",
+		"delete_your_account":"Deletar sua conta",
+      	"delete_account":"Deletar conta"
 	}
 }
