--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1202,6 +1202,10 @@
     "email_rcv_update_reciept":"По электронной почте вы будете получать обновления и квитанции на",
     "upload_license_is" :"Загруженная лицензия",
     "less_than_err":"Пожалуйста, загрузите изображения менее 6",
-		"err_file_formart": "Система не поддерживает этот формат файла"
+		"err_file_formart": "Система не поддерживает этот формат файла",
+    "reallyWantDelete" : "Вы действительно хотите удалить свою учетную запись?",
+		"looseAllData" :"Вы потеряете все свои данные, и никто больше не сможет получить к ним доступ! Кроме того, информация, хранящаяся в блокчейне Aimedis, теряется навсегда, поскольку вы единственный, кто может ее увидеть.",
+		"delete_your_account":"Удалить учетную запись",
+    "delete_account":"Удалить аккаунт"
   }
 }
