--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1202,6 +1202,10 @@
 		"email_rcv_update_reciept":"E-Mail erhalten Sie Updates und Quittungen auf",
 		"upload_license_is" :"Hochgeladene Lizenz ist",
 		"less_than_err":"Bitte laden Sie Bilder mit weniger als 6 . hoch",
-		"err_file_formart": "System wird dieses Dateiformat nicht unterstützt"
+		"err_file_formart": "System wird dieses Dateiformat nicht unterstützt",
+		"reallyWantDelete" : "Möchten Sie Ihr Konto wirklich löschen?",
+		"looseAllData" :"Sie werden alle Ihre Daten verlieren und niemand kann jemals wieder darauf zugreifen! Auch die in der Aimedis-Blockchain gespeicherten Informationen sind für immer verloren, da Sie der einzige sind, der sie sehen kann.",
+		"delete_your_account":"Lösche deinen Account",
+      	"delete_account":"Konto löschen"
 	}
 }
