Add cometchat tabs for contact and conversation

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1205,6 +1205,8 @@
 		"reallyWantDelete" : "هل تريد حقًا حذف حسابك؟",
 		"looseAllData" :"ستفقد جميع بياناتك ولن يتمكن أحد من الوصول إليها مرة أخرى! يتم أيضًا فقد المعلومات المخزنة داخل بلوكشين Aimedis إلى الأبد لأنك الوحيد الذي يمكنه رؤيتها.",
 		"delete_your_account":"حذف حسابك",
-      	"delete_account":"حذف الحساب"
+      	"delete_account":"حذف الحساب",
+		"ConversationList" :"قائمة المحادثة",
+		"ContactList" :"قائمة الإتصال"
 	}
 }
