--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1206,6 +1206,8 @@
     "reallyWantDelete" : "Вы действительно хотите удалить свою учетную запись?",
 		"looseAllData" :"Вы потеряете все свои данные, и никто больше не сможет получить к ним доступ! Кроме того, информация, хранящаяся в блокчейне Aimedis, теряется навсегда, поскольку вы единственный, кто может ее увидеть.",
 		"delete_your_account":"Удалить учетную запись",
-    "delete_account":"Удалить аккаунт"
+    "delete_account":"Удалить аккаунт",
+    "ConversationList" :"Список разговоров",
+		"ContactList" :"Contact List"
   }
 }
