--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1205,6 +1205,8 @@
 		"reallyWantDelete" : "Voulez-vous vraiment supprimer votre compte ?",
 		"looseAllData" :"Vous perdrez toutes vos données et plus personne ne pourra plus y accéder ! De plus, les informations stockées dans la blockchain Aimedis sont perdues à jamais car vous êtes le seul à pouvoir les voir.",
 		"delete_your_account":"Supprimer votre compte",
-      	"delete_account":"Supprimer le compte"
+      	"delete_account":"Supprimer le compte",
+		"ConversationList" :"Liste des conversations",
+		"ContactList" :"Contact List"
 	}
 }
