add patient flow page according to vertical and horizontal

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -179,7 +179,7 @@
 		"by_clicking_accept_aimedis_term": "By clicking this you accept Aimedis terms and its privacy policy",
 		"attached_doc": "Attached Document",
 		"u_r_nvr_obligate_to_upload_doc": "You are never obligated to upload your license or any other proof of ID.",
-		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing helthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
+		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing healthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
 		"date": "Date",
 		"edit_entry": "Edit entry",
 		"heart_rate": "Heart Rate",
