--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -463,7 +463,7 @@
 		"by_clicking_accept_aimedis_term": "By clicking this you accept Aimeidis terms and its privacy policy",
 		"attached_doc": "Attached Document",
 		"u_r_nvr_obligate_to_upload_doc": "You are never obligated to upload your license or any other proof of ID.",
-		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing helthcare data much easier, when you do. Also the deduction of healthcare services with your Pharma / Research / Insurance company is much easier that way.",
+		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing healthcare data much easier, when you do. Also the deduction of healthcare services with your Pharma / Research / Insurance company is much easier that way.",
 		"date": "Date",
 		"heart_rate": "Heart Rate",
 		"time": "Time",
