Changes in component of space page and add new component add

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -626,6 +626,7 @@
 		"Calling" :"Berufung...",
 		"incomingcall": "Eingehender Anruf",
 		"Status" :"Status",
-		"Liscence" :"Lizenz"
+		"Liscence" :"Lizenz",
+		"more" :"Mehr"
 	}
 }
