add dark mode option in left menu and add the class of Darkmode in each file of hospital admin

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -627,6 +627,7 @@
 		"incomingcall": "Eingehender Anruf",
 		"Status" :"Status",
 		"Liscence" :"Lizenz",
-		"more" :"Mehr"
+		"more" :"Mehr",
+		"DarkMode": "Dunkler Modus"
 	}
 }
