--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -446,7 +446,7 @@
 		"automatically_visible_content": "A new item is automatically VISIBLE to Doctors & Nurses in case of a regular profile access (PIN & ID) & must manually be made INVISIBLE by me (HIDE ALWAYS or HIDE UNTIL A SPECIFIED DATE.)",
 		"Opt_Out": "Opt-Out",
 		"Opt_In": "Opt-Out",
-		"apply_right_management_for_all_items": "Apply a right managment setting of ALL Items",
+		"apply_right_management_for_all_items": "Apply a right management setting of all items",
 		"plz_mention_date_time": "Please mention the date-time for until",
 		"make_all_item_visible_now_untill": "Make all items VISIBLE now (Until changed) ",
 		"make_all_item_visible_untill": "Make all items VISIBLE until",
