some spelling mistake correction

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -179,7 +179,7 @@
 		"by_clicking_accept_aimedis_term": "By clicking this you accept Aimedis terms and its privacy policy",
 		"attached_doc": "Attached Document",
 		"u_r_nvr_obligate_to_upload_doc": "You are never obligated to upload your license or any other proof of ID.",
-		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing helthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
+		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing healthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
 		"date": "Date",
 		"edit_entry": "Edit entry",
 		"heart_rate": "Heart Rate",
@@ -1200,7 +1200,7 @@
 		"choose_currency":"Choose Currency",
 		"cancel_subscription":"Cancel the subscription",
 		"r_u_want_cancel_sub":"Are you really want to cancel the subscription?",
-		"email_rcv_update_reciept":"Email you'll recive updates and receipts on",
+		"email_rcv_update_reciept":"Email you'll receive updates and receipts on",
 		"upload_license_is" :"Uploaded license is",
 		"reallyWantDelete" : "Do you really want to delete your Account?",
 		"looseAllData" :"You will lose all your data and no one can ever access it again! Also the information stored inside the Aimedis blockchain is lost forever as you are the only one to be able to see it.",
