correct questionaire and assigned house to professional

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -122,7 +122,7 @@
 		"AIMEDIS_Imprint": "AIMEDIS Impressum",
 		"imprint_Representation": "Geschäftsführung",
 		"Represented_managing_directors": "Vertreten durch die Geschäftsführer Michael J. Kaldasch, MD (CEO) und Ben O. El Idrissi, MD (COO)",
-		"imprint_Email": "E-Mail:",
+		"imprint_Email": "E-Mail",
 		"imprint_EmailAdd": "contact@aimedis.com",
 		"imprint_tele": "Telefon: +31 (0) 77 208 60 07",
 		"imprint_Web": "Internet:",
