--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -123,7 +123,7 @@
 		"AIMEDIS_Imprint": "AIMEDIS Imprint",
 		"imprint_Representation": "Representation",
 		"Represented_managing_directors": "Represented by the managing directors Michael J. KALDASCH, MD (CEOs) and Ben O. El Idrissi, MD (COO)",
-		"imprint_Email": "Email:",
+		"imprint_Email": "Email",
 		"imprint_EmailAdd": "contact@aimedis.com",
 		"imprint_tele": "Telephone: +31 (0) 77 208 60 07",
 		"imprint_Web": "Web:",
