trello issues  - spelling and designing related

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -552,7 +552,7 @@
 		"profile_id_pin_changed": "Profile ID and PIN is changed",
 		"profile_id": "Profile ID",
 		"fax_nmbr": "Fax number",
-		"sub_specilaity": "Sub-specialty",
+		"sub_specilaity": "Sub-speciality",
 		"profile_qr_code": "Profile QR code",
 		"the_info_update_succefully": "The information is updated successfully",
 		"the_info_isnt_update_succ": "The information is not updated successfully",
