--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -1206,6 +1206,7 @@
 		"delete_your_account":"Hesabını sil",
       	"delete_account":"Hesabı sil",
 		"ConversationList" :"konuşma listesi",
-		"ContactList" :"Kişi listesi"
+		"ContactList" :"Kişi listesi",
+		"searchingLoading" : "Arama yükleniyor..."
 	}
 }   
